--- a/config.yaml
+++ b/config.yaml
@@ -14,6 +14,8 @@ googleAnalytics: UA-145438397-1
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, es, de, nl
 DefaultContentLanguage: pt-br   
 
+timeout: 60000
+
 permalinks:
     post: /p/:slug/
     page: /:slug/
