Atualizar o config.yaml

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseurl: https://thiagoborba.me
+baseurl: https://joganacontadainfra.com.br
 languageCode: pt-br
 theme: hugo-theme-stack
 paginate: 5
